# video-intelligence-agent

./: CCTV_AGENT_GUIDE.md  LICENSE  PROJECT_REVIEW.md  README.md  VIDEO_SUMMARIZER_GUIDE.md  app.py  config.yaml  main.py  pyproject.toml
.manual_check/: daily_summary.txt  events.json  latest_analysis.json
.manual_check_flush/: daily_summary.txt  events.json  latest_analysis.json
data/clip_library/: clip_registry.json
docs/: INTERVIEW_GUIDE.md  SYSTEM_ARCHITECTURE.md
logs/: README.md
models/: README.md
outputs/examples/: daily_summary.txt  event_log.txt
outputs/lobby_demo/: daily_summary.txt  events.json  latest_analysis.json
outputs/lobby_demo/manifests/: events.jsonl
src/video_intelligence_agent/: __init__.py  api.py  cli.py  config.py  core.py  hardware.py  image_io.py  matcher.py  models.py  storage.py  types.py  unknowns.py  video_library.py  video_scene_analyzer.py  video_summarizer.py
src/video_intelligence_agent/agent/: __init__.py  agent_controller.py  event_retriever.py  query_parser.py  reasoning.py  sarvam_client.py  time_filter.py
src/video_intelligence_agent/cctv/: __init__.py  actions.py  chat.py  config.py  events.py  ingestion.py  models.py  motion.py  person.py  pipeline.py  storage.py  summary.py
src/video_intelligence_agent/cctv_pipeline/: __init__.py  models.py
src/video_intelligence_agent/cctv_pipeline/core/: __init__.py  detector.py  event_logic.py  motion_detector.py  recognition.py  tracker.py  video_processor.py
src/video_intelligence_agent/cctv_pipeline/services/: __init__.py  clip_manager.py  event_logger.py
src/video_intelligence_agent/cctv_pipeline/utils/: __init__.py  config.py  error_handler.py  logger.py
src/video_intelligence_agent/detection/: __init__.py
src/video_intelligence_agent/engines/: __init__.py  base.py  deepface_engine.py
src/video_intelligence_agent/event_engine/: __init__.py  rules.py
src/video_intelligence_agent/ingestion/: __init__.py  video_source.py
src/video_intelligence_agent/preprocessing/: __init__.py  motion_filter.py
src/video_intelligence_agent/summarization/: __init__.py
src/video_intelligence_agent/surveillance/: __init__.py  config.py
src/video_intelligence_agent/surveillance/detection/: __init__.py
src/video_intelligence_agent/surveillance/events/: __init__.py
src/video_intelligence_agent/surveillance/ingestion/: __init__.py
src/video_intelligence_agent/tracking/: __init__.py
src/video_intelligence_agent/video_processing/: __init__.py  frame_extractor.py
tests/: test_agent_query_logic.py  test_cctv_agent.py  test_core.py  test_modular_cctv_pipeline.py  test_surveillance_runtime.py  test_video_library.py  test_video_summarizer.py
webcam_app/: enroll_face.py  main.py
(+6 files in other folders)
